<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_snooze"
        android:icon="@drawable/ic_action_snooze"
        android:title="@string/menu_item_snooze"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_item_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/menu_item_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_done"
        android:icon="@drawable/ic_done_black_24dp"
        android:title="@string/menu_item_done"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_item_reactivate"
        android:icon="@drawable/ic_redo_black_24dp"
        android:title="@string/menu_item_reactivate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_save"
        android:title="@string/menu_item_save"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>