<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/snooze_custom_repeat_dialog_monthly_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:visibility="visible"
    tools:showIn="@layout/snooze_custom_repeat_dialog">

    <RadioButton
        android:id="@+id/snooze_custom_monthly_same_day_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/snooze_custom_repeat_monthly_same_day" />

    <RadioButton
        android:id="@+id/snooze_custom_monthly_nth_day_of_week_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/snooze_custom_repeat_monthly_nth_day_of_week" />

    <RadioButton
        android:id="@+id/snooze_custom_monthly_last_day_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/snooze_custom_repeat_monthly_last_day" />
</RadioGroup>